formatted foursquare API with desired data
I have venue name, category, address from Foursquare api correctly extracted ready to push into a dataframe. Next will go for Yelp API for reviews

--- a/notebooks/yelp_foursquare_EDA.ipynb
+++ b/notebooks/yelp_foursquare_EDA.ipynb
@@ -88,25 +88,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26\n",
-      "Prenup Pub\n"
+      "44\n",
+      "\n",
+      "\n",
+      "{'fsq_id': '4b11b1f2f964a520778223e3', 'categories': [{'id': 13026, 'name': 'BBQ Joint', 'short_name': 'BBQ', 'plural_name': 'BBQ Joints', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/bbqalt_', 'suffix': '.png'}}, {'id': 13289, 'name': 'Korean Restaurant', 'short_name': 'Korean', 'plural_name': 'Korean Restaurants', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/korean_', 'suffix': '.png'}}], 'chains': [], 'closed_bucket': 'LikelyOpen', 'distance': 24, 'geocodes': {'main': {'latitude': 43.664553, 'longitude': -79.414501}, 'roof': {'latitude': 43.664553, 'longitude': -79.414501}}, 'link': '/v3/places/4b11b1f2f964a520778223e3', 'location': {'address': '628 Bloor St W', 'country': 'CA', 'formatted_address': '628 Bloor St W, Toronto ON M6G 1K7', 'locality': 'Toronto', 'postcode': 'M6G 1K7', 'region': 'ON'}, 'name': 'Korean Village Restaurant', 'related_places': {}, 'timezone': 'America/Toronto'}\n",
+      "\n",
+      "\n",
+      "Korean Village Restaurant\n",
+      "628 Bloor St W\n",
+      "BBQ Joint\n",
+      "\n",
+      "\n",
+      "Ninetails Coffee Bar, 651 Bloor St W, ['Coffee Shop', 'Restaurant']\n",
+      "Snakes & Lattes, 600 Bloor St W, ['Café', 'Coffee Shop', 'Restaurant']\n",
+      "Rustle & Still Café, 605 Bloor St W, ['Café', 'Coffee Shop', 'Sandwich Spot']\n",
+      "Korean Village Restaurant, 628 Bloor St W, ['BBQ Joint', 'Korean Restaurant']\n",
+      "Buk Chang Dong Soon Tofu, 691 Bloor St W, ['Korean Restaurant']\n",
+      "Insomnia Restaurant and Lounge, 563 Bloor St W, ['Restaurant', 'Lounge']\n",
+      "Basecamp Climbing, 677 Bloor St W, ['Rock Climbing Spot', 'Gym and Studio']\n",
+      "Christie Pits Park, 750 Bloor St W, ['Park']\n",
+      "Sam James Coffee Bar, 297 Harbord St, ['Café', 'Coffee Shop', 'Restaurant']\n",
+      "Banjara Indian Cuisine, 796 Bloor St W, ['Indian Restaurant']\n",
+      "Kinka Izakaya Bloor, 559 Bloor St W, ['Japanese Restaurant', 'Sake Bar']\n",
+      "Crafty Coyote, 511 Bloor St W, ['Beer Bar', 'Restaurant']\n",
+      "Paradise Grapevine, 841 Bloor St W, ['Wine Bar']\n",
+      "El Pocho Antojitos Bar, 2 Follis Ave, ['Bar', 'Tex-Mex Restaurant']\n",
+      "Victory Cafe, 440 Bloor St W, ['Beer Bar', 'Restaurant']\n",
+      "Pizza Gigi, 189 Harbord St, ['Pizzeria']\n",
+      "New Generation Sushi, 486 Bloor St W, ['Sushi Restaurant']\n",
+      "Vermont Square Park, 819 Palmerston Ave, ['Playground']\n",
+      "Sushi on Bloor, 515 Bloor St W, ['Sushi Restaurant']\n",
+      "Famoso Italian Pizzeria - Annex, 386 Bloor St W, ['Pizzeria', 'Italian Restaurant']\n",
+      "Arisu, 584 Bloor St W, ['BBQ Joint', 'Japanese Restaurant', 'Korean Restaurant']\n",
+      "Baskin-Robbins, 726 Bloor St W, ['Ice Cream Parlor', 'Fast Food Restaurant']\n",
+      "St. Louis Bar and Grill, 376 Bloor St W, ['BBQ Joint', 'Italian Restaurant', 'Vietnamese Restaurant']\n",
+      "Pour Boy Pub, 666 Manning Ave, ['Pub', 'Restaurant']\n",
+      "Future Bistro, 483 Bloor St W, ['Bakery', 'Bistro', 'Café']\n",
+      "Coda, 794 Bathurst St, ['Night Club', 'Bar']\n",
+      "Paupers Pub, 539 Bloor St W, ['Pub', 'Burger Joint', 'American Restaurant']\n",
+      "Mary Brown's Chicken, 636 Bloor St W, ['Fried Chicken Joint', 'Fast Food Restaurant']\n",
+      "MaMa Chef Korean Restaurant, 648 Bloor St W, ['Korean Restaurant']\n",
+      "Jin Dal Lae, 647 Bloor St W, ['Korean Restaurant']\n",
+      "Ka-Chi, 2322 Bloor St W, ['Korean Restaurant']\n",
+      "Greek in the Village, 664 Bloor St W, ['Greek Restaurant']\n",
+      "JJIN Toast, 792 Bathurst St, ['Korean Restaurant']\n",
+      "Ed and Anne Mirvish Parkette, 843 Bathurst, ['Park']\n",
+      "Kinton Ramen, 668 Bloor St W, ['Ramen Restaurant', 'Noodle Restaurant']\n",
+      "Tim Hortons, 726 Bloor St W, ['Cafe, Coffee, and Tea House', 'Donut Shop', 'Restaurant']\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'address'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[141], line 21\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m venue \u001b[38;5;129;01min\u001b[39;00m res[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresults\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m     20\u001b[0m     name \u001b[38;5;241m=\u001b[39m venue[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m---> 21\u001b[0m     address \u001b[38;5;241m=\u001b[39m venue[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlocation\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maddress\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     22\u001b[0m     category_names \u001b[38;5;241m=\u001b[39m [category[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m category \u001b[38;5;129;01min\u001b[39;00m venue[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcategories\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00maddress\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcategory_names\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'address'"
      ]
     }
    ],
    "source": [
     "# testing\n",
-    "res = get_venues_fs(latitude=43.657763, longitude=-79.389165, radius=750, api_key=FOURSQUARE_KEY, categories=13003, limit=50)\n",
+    "\n",
+    "categories = '10035,13003,13065,16000' # See following cell bullet points for category names - bars, restaurants, live shows, outdoors\n",
+    "\n",
+    "res = get_venues_fs(latitude=43.664467, longitude=-79.414783, radius=750, api_key=FOURSQUARE_KEY, categories=categories, limit=50)\n",
     "\n",
     "print(len(res['results']))\n",
+    "print(\"\\n\")\n",
+    "print(res['results'][3]) # main body of a specific venue result\n",
+    "print(\"\\n\")\n",
     "\n",
-    "print(res['results'][2]['name']) # this is how you access the name, we could loop through [i] to get names\n",
+    "print(res['results'][3]['name'])  # this is how you access the name, we could loop through to get names\n",
+    "\n",
+    "print(res['results'][3]['location']['address']) #accessing the address for the dataframe\n",
+    "\n",
+    "print(res['results'][3]['categories'][0]['name']) # accessing the first general category of the venue, most only have one\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "for venue in res['results']:\n",
+    "    name = venue['name']\n",
+    "    address = venue['location']['address']\n",
+    "    category_names = [category['name'] for category in venue['categories']] # there are multiple categories for some venues\n",
+    "    print(f\"{name}, {address}, {category_names}\")\n",
     "\n",
     "    \n",
     "# print(res['results'])"
@@ -119,7 +192,20 @@
     "**Notes on the test API Call and justification of parameters:**\n",
     "- Downtown Toronto is very densely packed with bike stations and the amenities I will be searching for. The default radius is 5km which is too large to capture the relationship between bike/dock availability and amenities. The appropriate range would be either **1km or even 750m**\n",
     "- Foursquare Category IDs of interest are: 10035 (Performing Arts Venue), 12013 (College and University amenities), 13003 (Bars), 13065 (Restaurants)\n",
-    "- Other candidates: 16000 (landmarks & outdoors), 17057 (Food & Beverate Retail), 18000 (Sports & Recreaction)"
+    "- Other candidates: 16000 (landmarks & outdoors), 17057 (Food & Beverage Retail), 18000 (Sports & Recreaction)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Notes on the information to return in dataframe**\n",
+    "- Name of Venue\n",
+    "- Address\n",
+    "- Venue Categories\n",
+    "- The latitude and longitude used to call the results belongs to the bike dock\n",
+    "\n",
+    "The unified dataframe is about the bike docks/stations and this data will return number of bars, number of restaurants, performing arts venues, outdoor venues"
    ]
   },
   {
