added cleaned venue data df sample

--- a/notebooks/yelp_foursquare_EDA.ipynb
+++ b/notebooks/yelp_foursquare_EDA.ipynb
@@ -1561,10 +1561,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# csv_file_path = '../data/test_venue_df_cleaned.csv' # the file path to put this cleaned table as a sample into the repository\n",
+    "# data_test.to_csv(csv_file_path, index=False)"
+   ]
   },
   {
    "cell_type": "code",
