cleaned up city bike csvs with ll and bike occupancy %
added ll column and free bikes/total bikes occupancy for the city bike CSV files

--- a/notebooks/yelp_foursquare_EDA.ipynb
+++ b/notebooks/yelp_foursquare_EDA.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1622,7 +1622,7 @@
     "        latitude (float): latitude for query (must be combined with longitude)\n",
     "        longitude (float): longitude for query (must be combined with latitude)\n",
     "        yelp_key (str): yelp API to use for query (see imports in first cell)\n",
-    "        categories (str) : Place type, wit Yelp API they are descriptive eg. \"bar,restaurant\" unlike Foursquare's 5-digit codes. Separate ids with commas\n",
+    "        categories (str) : Place type, with Yelp API they are descriptive eg. \"bar,restaurant\" unlike Foursquare's 5-digit codes. Separate ids with commas\n",
     "    Returns:\n",
     "        response: response object from the requests library.\n",
     "    \"\"\"\n",
@@ -1630,12 +1630,12 @@
     "    \n",
     "    headers = {\n",
     "        \"Accept\": \"application/json\",\n",
-    "        \"Authorization\": yelp_key\n",
+    "        \"Authorization\": \"Bearer \" + yelp_key # strange api key syntax \"Bearer \"\n",
     "    }\n",
     "    \n",
     "    params = {\n",
-    "        \"latitude\": f\"{latitude}\",\n",
-    "        \"longitude\": f\"{longitude}\",\n",
+    "        \"latitude\": latitude,\n",
+    "        \"longitude\": longitude,\n",
     "        \"radius\": radius,\n",
     "        \"categories\": categories,\n",
     "        \"limit\": limit\n",
@@ -1646,36 +1646,80 @@
     "    if response.status_code == 200: # 200 is success\n",
     "        return response.json()\n",
     "    else:\n",
+    "        print(response)\n",
     "        response.raise_for_status()   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 200,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "HTTPError",
-     "evalue": "400 Client Error: Bad Request for url: https://api.yelp.com/v3/businesses/search?latitude=43.664467&longitude=-79.414783&radius=750&categories=cafes%2Cbars%2Crestaurants%2Cparks%2Cmusicvenues&limit=50",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[38], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m keep \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m43.664467\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m79.414783\u001b[39m\n\u001b[1;32m      4\u001b[0m yelp_categories \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcafes,bars,restaurants,parks,musicvenues\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;66;03m# bars, restaurants, live shows, outdoors\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m yelp_res \u001b[38;5;241m=\u001b[39m get_venues_yelp(latitude\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m43.664467\u001b[39m, longitude\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m79.414783\u001b[39m, radius\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m750\u001b[39m, yelp_key\u001b[38;5;241m=\u001b[39mYELP_KEY, categories\u001b[38;5;241m=\u001b[39myelp_categories, limit\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(yelp_res)\n",
-      "Cell \u001b[0;32mIn[30], line 32\u001b[0m, in \u001b[0;36mget_venues_yelp\u001b[0;34m(latitude, longitude, radius, yelp_key, categories, limit)\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39mjson()\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 32\u001b[0m     response\u001b[38;5;241m.\u001b[39mraise_for_status()\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/requests/models.py:1024\u001b[0m, in \u001b[0;36mResponse.raise_for_status\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1019\u001b[0m     http_error_msg \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m   1020\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstatus_code\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Server Error: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mreason\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m for url: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1021\u001b[0m     )\n\u001b[1;32m   1023\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[0;32m-> 1024\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m)\n",
-      "\u001b[0;31mHTTPError\u001b[0m: 400 Client Error: Bad Request for url: https://api.yelp.com/v3/businesses/search?latitude=43.664467&longitude=-79.414783&radius=750&categories=cafes%2Cbars%2Crestaurants%2Cparks%2Cmusicvenues&limit=50"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# testing\n",
     "\n",
     "yelp_categories = 'cafes,bars,restaurants,parks,musicvenues' # bars, restaurants, live shows, outdoors\n",
     "\n",
-    "yelp_res = get_venues_yelp(latitude=43.664467, longitude=-79.414783, radius=750, yelp_key=YELP_KEY, categories=yelp_categories, limit=50)\n",
+    "yelp_res = get_venues_yelp(latitude=43.664467, longitude=-79.414783, radius=800, yelp_key=YELP_KEY, categories=yelp_categories, limit=50)\n",
     "\n",
-    "print(yelp_res)"
+    "test_response = yelp_res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 'RrqcZLX05djKo1GVLMXMDQ',\n",
+       " 'alias': 'korean-village-restaurant-toronto',\n",
+       " 'name': 'Korean Village Restaurant',\n",
+       " 'image_url': 'https://s3-media3.fl.yelpcdn.com/bphoto/I-0wVgAyB2OWoSI-nELiUA/o.jpg',\n",
+       " 'is_closed': False,\n",
+       " 'url': 'https://www.yelp.com/biz/korean-village-restaurant-toronto?adjust_creative=fJ3m_5J6aNJaibvcOfXcdA&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=fJ3m_5J6aNJaibvcOfXcdA',\n",
+       " 'review_count': 452,\n",
+       " 'categories': [{'alias': 'korean', 'title': 'Korean'}],\n",
+       " 'rating': 4.0,\n",
+       " 'coordinates': {'latitude': 43.66461, 'longitude': -79.41444},\n",
+       " 'transactions': [],\n",
+       " 'price': '$$',\n",
+       " 'location': {'address1': '628 Bloor Street W',\n",
+       "  'address2': '',\n",
+       "  'address3': '',\n",
+       "  'city': 'Toronto',\n",
+       "  'zip_code': 'M6G 1K7',\n",
+       "  'country': 'CA',\n",
+       "  'state': 'ON',\n",
+       "  'display_address': ['628 Bloor Street W', 'Toronto, ON M6G 1K7', 'Canada']},\n",
+       " 'phone': '+14165360290',\n",
+       " 'display_phone': '+1 416-536-0290',\n",
+       " 'distance': 30.77053052269232,\n",
+       " 'business_hours': [{'open': [{'is_overnight': False,\n",
+       "     'start': '1200',\n",
+       "     'end': '2145',\n",
+       "     'day': 1},\n",
+       "    {'is_overnight': False, 'start': '1200', 'end': '2145', 'day': 2},\n",
+       "    {'is_overnight': False, 'start': '1200', 'end': '2145', 'day': 3},\n",
+       "    {'is_overnight': False, 'start': '1200', 'end': '2215', 'day': 4},\n",
+       "    {'is_overnight': False, 'start': '1200', 'end': '2215', 'day': 5},\n",
+       "    {'is_overnight': False, 'start': '1200', 'end': '2145', 'day': 6}],\n",
+       "   'hours_type': 'REGULAR',\n",
+       "   'is_open_now': False}],\n",
+       " 'attributes': {'business_temp_closed': None,\n",
+       "  'menu_url': 'https://www.koreanvillageto.com/menu',\n",
+       "  'open24_hours': None,\n",
+       "  'waitlist_reservation': None}}"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_response['businesses'][0]"
    ]
   },
   {
@@ -1716,6 +1760,21 @@
    "metadata": {},
    "source": [
     "Which API provided you with more complete data? Provide an explanation. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yelp API is detailed about specific establishments, there are more granular items available from the API call such as:\n",
+    "- The average reviews of the establishment\n",
+    "- Price level\n",
+    "- Attributes e.g. their private quote capability, disability/wheelchair accessibility, can you reserve via Yelp\n",
+    "\n",
+    "Aside from average review score, not many of these features seem useful for this project, many advanced features are also available on premium tier pricing\n",
+    "- Ambience of the establishment\n",
+    "- Pet friendly establishments\n",
+    "- \"Liked by\" e.g. specific demographics and whether they liked the establishment\n"
    ]
   },
   {
